🐛Fixed bug about superhero img overlapping with header

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,6 +1,7 @@
 @import '../../design/variables';
 
 .header {
+  z-index: 1;
   position: fixed;
   width: 100%;
   height: 80px;
